--- a/index.html
+++ b/index.html
@@ -3,56 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KarlTech – Soutien TI</title>
+  <title>KarlTech – Soutien Informatique</title>
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; color: #333; margin: 0; padding: 0; }
-    header { background: #1a202c; color: white; padding: 2rem; text-align: center; }
-    section { padding: 2rem; max-width: 800px; margin: auto; background: white; margin-top: 1rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    h1, h2 { color: #1a202c; }
-    ul { padding-left: 1.2rem; }
-    footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #666; }
-    .contact { background: #edf2f7; padding: 1rem; border-radius: 6px; margin-top: 1rem; }
-    .contact p { margin: 0.5rem 0; }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+    h1 {
+      color: #0055a5;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      color: #666;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>KarlTech</h1>
-    <p>Soutien informatique à domicile ou à distance</p>
+    <h1>Bienvenue chez KarlTech</h1>
+    <p>Votre expert en soutien informatique à Shawinigan et à distance</p>
   </header>
-
-  <section>
-    <h2>À propos</h2>
-    <p>Bonjour, je m'appelle <strong>Karl L'Espérance</strong>. Je propose un service de soutien informatique personnalisé pour particuliers et petites entreprises dans la région de Shawinigan. Dépannage, optimisation, installation ou protection : je suis là pour vous aider!</p>
-  </section>
 
   <section>
     <h2>Services offerts</h2>
     <ul>
-      <li>Soutien T.I à domicile ou à distance</li>
-      <li>Back-up et sauvegarde de données</li>
-      <li>Formatage et réinstallation de système</li>
-      <li>Installation de logiciels</li>
+      <li>Formatage et réinstallation Windows</li>
       <li>Suppression de virus et optimisation</li>
-      <li>Installation de pièces d’ordinateur</li>
-      <li>Montage d'ordinateur personnalisé (Custom build)</li>
+      <li>Installation de logiciels</li>
+      <li>Installation de pièces ou upgrade PC</li>
+      <li>Assemblage PC sur mesure (custom build)</li>
+      <li>Sauvegarde et récupération de données</li>
     </ul>
   </section>
 
   <section>
     <h2>Zone desservie</h2>
-    <p>Je me déplace à Shawinigan et dans les environs.</p>
+    <p>Shawinigan et les environs – Possibilité de service à domicile ou à distance avec frais de déplacement minimes.</p>
   </section>
 
-  <section class="contact">
+  <section>
     <h2>Contact</h2>
-    <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
-    <p><strong>Courriel :</strong> (à venir)</p>
-    <p><em>Formulaire de contact à venir dès que l’adresse courriel est prête.</em></p>
+    <p>📧 Courriel : <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+    <p>📞 Téléphone : <a href="tel:8738879620">873-887-9620</a></p>
+  </section>
+
+  <section>
+    <h2>À propos</h2>
+    <p>Je m’appelle Karl, passionné d’informatique depuis plus de 10 ans. Mon objectif est d’offrir un service rapide, humain et accessible à tous.</p>
   </section>
 
   <footer>
-    © 2025 KarlTech — Tous droits réservés.
+    &copy; KarlTech – Tous droits réservés
   </footer>
 </body>
 </html>
