--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <header>
     <h1>Bienvenue chez KarlTech</h1>
-    <p>Votre expert en soutien informatique à Shawinigan et à distance</p>
+    <p>Votre expert en soutien informatique à Shawinigan et aux alentours</p>
   </header>
 
   <section>
