--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f7f9;
-      color: #333;
+      background-color: #2f2f2f;
+      color: #f0f0f0;
     }
     header {
-      background-color: #0057b8;
+      background-color: #5a189a;
       color: white;
       padding: 30px 20px;
       text-align: center;
@@ -23,7 +23,7 @@
       font-size: 2em;
     }
     nav {
-      background-color: #003e7e;
+      background-color: #3c096c;
       color: white;
       text-align: center;
       padding: 10px;
@@ -38,9 +38,13 @@
       max-width: 900px;
       margin: 30px auto;
       padding: 0 20px;
+      border-bottom: 2px solid #444;
+    }
+    section:last-of-type {
+      border-bottom: none;
     }
     section h2 {
-      color: #0057b8;
+      color: #c77dff;
     }
     ul {
       padding-left: 20px;
@@ -51,12 +55,12 @@
       margin-top: 15px;
     }
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid #666;
       padding: 12px;
       text-align: left;
     }
     th {
-      background-color: #0057b8;
+      background-color: #5a189a;
       color: white;
     }
     form {
@@ -67,22 +71,31 @@
     input, textarea {
       padding: 10px;
       font-size: 1em;
-      border: 1px solid #ccc;
+      border: 1px solid #555;
       border-radius: 4px;
+      background-color: #444;
+      color: #fff;
     }
     button {
       padding: 10px;
-      background-color: #0057b8;
+      background-color: #7209b7;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
     }
+    button:hover {
+      background-color: #560bad;
+    }
+    a {
+      color: #c77dff;
+    }
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #eee;
+      background-color: #1e1e1e;
       margin-top: 40px;
+      color: #aaa;
     }
   </style>
 </head>
