--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #2f2f2f;
+      background: url('https://images.unsplash.com/photo-1581091012184-7f31cefcf8d5?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      background-size: cover;
       color: #f0f0f0;
+    }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(47, 47, 47, 0.85);
+      z-index: -1;
     }
     header {
       background-color: #5a189a;
@@ -39,6 +48,8 @@
       margin: 30px auto;
       padding: 0 20px;
       border-bottom: 2px solid #444;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
     }
     section:last-of-type {
       border-bottom: none;
@@ -58,6 +69,7 @@
       border: 1px solid #666;
       padding: 12px;
       text-align: left;
+      background-color: rgba(255, 255, 255, 0.05);
     }
     th {
       background-color: #5a189a;
