--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       z-index: -1;
     }
     header {
-      background-color: #5a189a;
+      background-color: #1c1c2e;
       color: white;
       padding: 30px 20px;
       text-align: center;
@@ -32,7 +32,7 @@
       font-size: 2em;
     }
     nav {
-      background-color: #3c096c;
+      background-color: #2d2d44;
       color: white;
       text-align: center;
       padding: 10px;
@@ -55,7 +55,7 @@
       border-bottom: none;
     }
     section h2 {
-      color: #c77dff;
+      color: #99c0ff;
     }
     ul {
       padding-left: 20px;
@@ -72,7 +72,7 @@
       background-color: rgba(255, 255, 255, 0.05);
     }
     th {
-      background-color: #5a189a;
+      background-color: #1c1c2e;
       color: white;
     }
     form {
@@ -90,17 +90,17 @@
     }
     button {
       padding: 10px;
-      background-color: #7209b7;
+      background-color: #2d2d44;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #560bad;
+      background-color: #1c1c2e;
     }
     a {
-      color: #c77dff;
+      color: #99c0ff;
     }
     footer {
       text-align: center;
@@ -122,6 +122,7 @@
     <a href="#tarifs">Tarifs</a>
     <a href="#contact">Contact</a>
     <a href="#faq">FAQ</a>
+    <a href="#apropos">À propos</a>
   </nav>
 
   <section id="services">
@@ -189,6 +190,12 @@
   <section id="faq">
     <h2>FAQ - Questions Fréquentes</h2>
     <p>Cette section sera optimisée prochainement pour répondre à vos questions courantes.</p>
+  </section>
+
+  <section id="apropos">
+    <h2>À propos</h2>
+    <p>Je suis Karl L'Espérance, un passionné de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, mon objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place. </p>
+    <p>Mon approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, je suis là pour vous simplifier la vie numérique.</p>
   </section>
 
   <footer>
