--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       background-color: #1c1c2e;
       color: white;
       padding: 30px 20px;
-      text-align: center;
+      text-align: left;
     }
     header h1 {
       margin: 0;
@@ -113,8 +113,12 @@
 </head>
 <body>
   <header>
-    <h1>KarlTech</h1>
-    <p>Votre expert en soutien informatique à Shawinigan et à distance</p>
+    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
+    <div>
+      <h1>KarlTech</h1>
+      <p>Votre expert en soutien informatique à Shawinigan et à distance</p>
+    </div>
+    <div style="clear: both;"></div>
   </header>
 
   <nav>
@@ -194,7 +198,7 @@
 
   <section id="apropos">
     <h2>À propos</h2>
-    <p>Je suis Karl L'Espérance, un passionné de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, mon objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place. </p>
+    <p>Je suis Karl L'Espérance, un passionné de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, mon objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
     <p>Mon approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, je suis là pour vous simplifier la vie numérique.</p>
   </section>
 
