--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KarlTech - Soutien Informatique</title>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -12,17 +15,22 @@
       background: url('support-informatique.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #f0f0f0;
+      opacity: 0;
+      animation: fadeIn 1s ease-in forwards;
+    }
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
     body::before {
       content: "";
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(47, 47, 47, 0.85);
+      background-color: rgba(25, 37, 52, 0.90);
       z-index: -1;
     }
     header {
-      background-color: #1c1c2e;
+      background-color: #1b2837;
       color: white;
       padding: 30px 20px;
       text-align: left;
@@ -32,7 +40,7 @@
       font-size: 2em;
     }
     nav {
-      background-color: #2d2d44;
+      background-color: #1a2736;
       color: white;
       text-align: center;
       padding: 10px;
@@ -43,19 +51,22 @@
       text-decoration: none;
       font-weight: bold;
     }
+    nav a:hover {
+      color: #66b2ff;
+    }
     section {
       max-width: 900px;
       margin: 30px auto;
-      padding: 0 20px;
-      border-bottom: 2px solid #444;
-      background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      border-bottom: 2px solid #333;
+      background-color: rgba(24, 36, 51, 0.85);
       border-radius: 10px;
     }
     section:last-of-type {
       border-bottom: none;
     }
     section h2 {
-      color: #99c0ff;
+      color: #66b2ff;
     }
     ul {
       padding-left: 20px;
@@ -66,13 +77,13 @@
       margin-top: 15px;
     }
     th, td {
-      border: 1px solid #666;
+      border: 1px solid #444;
       padding: 12px;
       text-align: left;
       background-color: rgba(255, 255, 255, 0.05);
     }
     th {
-      background-color: #1c1c2e;
+      background-color: #192534;
       color: white;
     }
     form {
@@ -85,33 +96,52 @@
       font-size: 1em;
       border: 1px solid #555;
       border-radius: 4px;
-      background-color: #444;
+      background-color: #2c3e50;
       color: #fff;
     }
     button {
       padding: 10px;
-      background-color: #2d2d44;
+      background-color: #1a2736;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #1c1c2e;
+      background-color: #66b2ff;
+      color: #000;
     }
     a {
-      color: #99c0ff;
+      color: #66b2ff;
     }
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #1e1e1e;
+      background-color: #192534;
       margin-top: 40px;
       color: #aaa;
+    }
+    #backToTop {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background-color: #66b2ff;
+      color: black;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      display: none;
+      font-weight: bold;
+      z-index: 999;
+    }
+    #backToTop:hover {
+      background-color: #4e9fe2;
     }
   </style>
 </head>
 <body>
+
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
     <div>
@@ -183,11 +213,14 @@
     <p>🌐 <a href="https://www.karltech.ca">www.karltech.ca</a></p>
 
     <h3>Formulaire de contact</h3>
-    <form action="mailto:info@karltech.ca" method="post" enctype="text/plain">
+    <form action="https://formspree.io/f/mnnvdepz" method="POST">
       <input type="text" name="nom" placeholder="Votre nom" required>
       <input type="email" name="email" placeholder="Votre adresse e-mail" required>
       <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
       <button type="submit">Envoyer</button>
+      <p id="confirmation" style="display:none; color: #66b2ff; margin-top:10px;">
+        ✅ Merci ! Votre message a bien été envoyé.
+      </p>
     </form>
   </section>
 
@@ -205,5 +238,34 @@
   <footer>
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
+
+  <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">↑ Haut de page</button>
+
+  <script>
+    const btn = document.getElementById('backToTop');
+    window.addEventListener('scroll', () => {
+      btn.style.display = window.scrollY > 300 ? 'block' : 'none';
+    });
+
+    const form = document.querySelector("form");
+    const confirmation = document.getElementById("confirmation");
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      }).then(response => {
+        if (response.ok) {
+          confirmation.style.display = "block";
+          form.reset();
+        } else {
+          alert("Une erreur est survenue. Essayez à nouveau.");
+        }
+      });
+    });
+  </script>
+
 </body>
 </html>
