--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       z-index: -1;
     }
     header {
-      background-color: #1b2837;
+      background-color: transparent; /* Remplace l'ancien fond */
       color: white;
       padding: 30px 20px;
       text-align: left;
     }
+
     header h1 {
       margin: 0;
       font-size: 2em;
