--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <a href="#services">Services</a>
     <a href="#tarifs">Tarifs</a>
     <a href="#contact">Contact</a>
-    <a href="#faq">FAQ</a>
+    <a href="faq.html">FAQ</a>
     <a href="#apropos">À propos</a>
   </nav>
 
