--- a/faq.html.html
+++ b/faq.html.html
@@ -56,7 +56,7 @@
     <p>Plusieurs services sont offerts. Pour avoir une bonne vue d'ensemble, veuillez consulter la section « Services » du site Web.</p>
 
     <h2>2. Est-ce que vous vous déplacez à domicile ?</h2>
-    <p>Oui, je peux me déplacer dans Shawinigan et les environs pour un petit frais supplémentaire.</p>
+<p>Oui, nous nous déplaçons dans Shawinigan et les environs pour un petit frais supplémentaire.</p>
 
     <h2>3. Puis-je vous confier mon ordinateur pour un diagnostic ?</h2>
     <p>Bien sûr. Nous restons très professionnels et nous faisons des suivis réguliers.</p>
