--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
     <div>
       <h1>KarlTech</h1>
-      <p>Votre expert en soutien informatique à Shawinigan et à distance</p>
+      <p>Votre expert en soutien informatique à Shawinigan et environs</p>
     </div>
     <div style="clear: both;"></div>
   </header>
