--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
       z-index: -1;
     }
     header {
-      background-color: transparent; /* Remplace l'ancien fond */
+      background-color: transparent;
       color: white;
       padding: 30px 20px;
       text-align: left;
     }
-
     header h1 {
       margin: 0;
       font-size: 2em;
@@ -225,15 +224,10 @@
     </form>
   </section>
 
-  <section id="faq">
-    <h2>FAQ - Questions Fréquentes</h2>
-    <p>Cette section sera optimisée prochainement pour répondre à vos questions courantes.</p>
-  </section>
-
   <section id="apropos">
     <h2>À propos</h2>
-    <p>Je suis Karl L'Espérance, un passionné de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, mon objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
-    <p>Mon approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, je suis là pour vous simplifier la vie numérique.</p>
+    <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
+    <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
   </section>
 
   <footer>
