--- a/index.html
+++ b/index.html
@@ -134,32 +134,66 @@
   </header>
 
   <nav>
-    <a href="#services">Services</a>
-    <a href="#tarifs">Tarifs</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="#contact">Contact</a>
     <a href="faq.html">FAQ</a>
     <a href="#apropos">À propos</a>
   </nav>
 
-  <section id="services">
-    <h2>Services offerts</h2>
-    <p>Nous offrons un service professionnel, humain et adapté à vos besoins, que ce soit à domicile, à distance ou à notre atelier. Voici un aperçu de nos services les plus populaires :</p>
-    <ul style="list-style: none;">
-      <li><i class="fas fa-sync-alt"></i> <strong>Formatage et réinstallation de Windows</strong> – Installation propre, mises à jour, pilotes et configuration de base</li>
-      <li><i class="fas fa-shield-virus"></i> <strong>Suppression de virus et optimisation</strong> – Nettoyage complet, amélioration des performances</li>
-      <li><i class="fas fa-cogs"></i> <strong>Installation de logiciels</strong> – Antivirus, navigateurs, outils pro et plus</li>
-      <li><i class="fas fa-file-word"></i> <strong>Assistance avec Microsoft Office</strong> – Word, Excel, Outlook, activation et dépannage</li>
-      <li><i class="fas fa-headset"></i> <strong>Assistance à distance</strong> – Prise en main sécurisée via AnyDesk</li>
-      <li><i class="fas fa-microchip"></i> <strong>Installation et remplacement de pièces</strong> – RAM, disques SSD, GPU, etc.</li>
-      <li><i class="fas fa-tools"></i> <strong>Assemblage PC sur mesure</strong> – Monté selon vos besoins ou à partir de vos pièces</li>
-      <li><i class="fas fa-database"></i> <strong>Sauvegarde et récupération de données</strong> – Prévention ou récupération après erreur</li>
-      <li><i class="fas fa-envelope"></i> <strong>Création de courriels professionnels</strong> – Adresses personnalisées pour votre image</li>
-    </ul>
-    <p>Vous avez un besoin spécifique ? <a href="#contact">Contactez-nous</a>. Nous sommes à l’écoute et flexibles.</p>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>📧 <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+    <p>📞 <a href="tel:8738879620">873-887-9620</a></p>
+    <p>🌐 <a href="https://www.karltech.ca">www.karltech.ca</a></p>
+
+    <h3>Formulaire de contact</h3>
+    <form action="https://formspree.io/f/mnnvdepz" method="POST">
+      <input type="text" name="nom" placeholder="Votre nom" required>
+      <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+      <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+      <button type="submit">Envoyer</button>
+      <p id="confirmation" style="display:none; color: #66b2ff; margin-top:10px;">
+        ✅ Merci ! Votre message a bien été envoyé.
+      </p>
+    </form>
   </section>
 
-  <section id="tarifs">
-    <h2>Tableau de prix</h2>
-    <table>
-      <thead>
-        <tr>
+  <section id="apropos">
+    <h2>À propos</h2>
+    <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
+    <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 KarlTech. Tous droits réservés.
+  </footer>
+
+  <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">↑ Haut de page</button>
+
+  <script>
+    const btn = document.getElementById('backToTop');
+    window.addEventListener('scroll', () => {
+      btn.style.display = window.scrollY > 300 ? 'block' : 'none';
+    });
+
+    const form = document.querySelector("form");
+    const confirmation = document.getElementById("confirmation");
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      }).then(response => {
+        if (response.ok) {
+          confirmation.style.display = "block";
+          form.reset();
+        } else {
+          alert("Une erreur est survenue. Essayez à nouveau.");
+        }
+      });
+    });
+  </script>
+</body>
+</html>
