--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -3,42 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services et Tarifs – KarlTech</title>
+  <title>KarlTech - Soutien Informatique</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8BQ6dM2v6j5vJf8kRAZP3w3ZXt87GXjG+5XkQ/29h6wxNRZ1qNhN/mI6Lg0j3UL2Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
+    html { scroll-behavior: smooth; }
     body {
-      font-family: Arial, sans-serif;
-      background: #1b1b2f;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: url('support-informatique.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: #f0f0f0;
-      padding: 20px;
+      opacity: 0;
+      animation: fadeIn 1s ease-in forwards;
     }
-    h1 {
+    @keyframes fadeIn { to { opacity: 1; } }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(25, 37, 52, 0.90);
+      z-index: -1;
+    }
+    header {
+      background-color: transparent;
+      color: white;
+      padding: 30px 20px;
+      text-align: left;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    nav {
+      background-color: #1a2736;
+      color: white;
       text-align: center;
-      color: #66b2ff;
+      padding: 10px;
     }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover { color: #66b2ff; }
     section {
       max-width: 900px;
-      margin: auto;
-      background-color: #2a2a40;
+      margin: 30px auto;
       padding: 20px;
+      border-bottom: 2px solid #333;
+      background-color: rgba(24, 36, 51, 0.85);
       border-radius: 10px;
-      margin-bottom: 40px;
     }
-    h2 {
-      color: #66b2ff;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    ul li {
-      margin: 10px 0;
-      font-size: 1.1em;
-    }
-    ul li i {
-      margin-right: 10px;
-      color: #66b2ff;
-    }
+    section:last-of-type { border-bottom: none; }
+    section h2 { color: #66b2ff; }
+    ul { padding-left: 0; }
+    ul li { margin-bottom: 10px; }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -48,65 +70,130 @@
       border: 1px solid #444;
       padding: 12px;
       text-align: left;
-      background-color: #1b1b2f;
+      background-color: rgba(255, 255, 255, 0.05);
     }
-    th {
-      background-color: #0f192e;
+    th { background-color: #192534; color: white; }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    input, textarea {
+      padding: 10px;
+      font-size: 1em;
+      border: 1px solid #555;
+      border-radius: 4px;
+      background-color: #2c3e50;
       color: #fff;
     }
+    button {
+      padding: 10px;
+      background-color: #1a2736;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #66b2ff;
+      color: #000;
+    }
+    a { color: #66b2ff; }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #192534;
+      margin-top: 40px;
+      color: #aaa;
+    }
+    #backToTop {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background-color: #66b2ff;
+      color: black;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      display: none;
+      font-weight: bold;
+      z-index: 999;
+    }
+    #backToTop:hover { background-color: #4e9fe2; }
   </style>
 </head>
 <body>
-  <h1>Nos Services et Tarifs</h1>
+  <header>
+    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
+    <div>
+      <h1>KarlTech</h1>
+      <p>Votre expert en soutien informatique à Shawinigan et environs</p>
+    </div>
+    <div style="clear: both;"></div>
+  </header>
 
-  <section id="services">
-    <h2>Services offerts</h2>
-    <ul>
-      <li><i class="fas fa-sync-alt"></i> Formatage et réinstallation de Windows</li>
-      <li><i class="fas fa-shield-virus"></i> Suppression de virus et optimisation</li>
-      <li><i class="fas fa-cogs"></i> Installation de logiciels</li>
-      <li><i class="fas fa-file-word"></i> Assistance avec Microsoft Office</li>
-      <li><i class="fas fa-headset"></i> Assistance à distance (AnyDesk)</li>
-      <li><i class="fas fa-microchip"></i> Installation ou remplacement de pièces</li>
-      <li><i class="fas fa-tools"></i> Assemblage PC sur mesure</li>
-      <li><i class="fas fa-database"></i> Sauvegarde et récupération de données</li>
-      <li><i class="fas fa-envelope"></i> Création de courriels professionnels</li>
-    </ul>
+  <nav>
+    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="#contact">Contact</a>
+    <a href="faq.html">FAQ</a>
+    <a href="#apropos">À propos</a>
+  </nav>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>📧 <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+    <p>📞 <a href="tel:8738879620">873-887-9620</a></p>
+    <p>🌐 <a href="https://www.karltech.ca">www.karltech.ca</a></p>
+
+    <h3>Formulaire de contact</h3>
+    <form action="https://formspree.io/f/mnnvdepz" method="POST">
+      <input type="text" name="nom" placeholder="Votre nom" required>
+      <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+      <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+      <button type="submit">Envoyer</button>
+      <p id="confirmation" style="display:none; color: #66b2ff; margin-top:10px;">
+        ✅ Merci ! Votre message a bien été envoyé.
+      </p>
+    </form>
   </section>
 
-  <section id="tarifs">
-    <h2>Tarifs</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Service</th>
-          <th>Description</th>
-          <th>Prix</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Formatage Windows</td>
-          <td>Installation propre de Windows, pilotes, mises à jour</td>
-          <td>60 $</td>
-        </tr>
-        <tr>
-          <td>Suppression de virus</td>
-          <td>Nettoyage complet et optimisation du système</td>
-          <td>50 $</td>
-        </tr>
-        <tr>
-          <td>Installation de pièces</td>
-          <td>RAM, SSD, carte graphique, etc.</td>
-          <td>40 $</td>
-        </tr>
-        <tr>
-          <td>Assemblage PC personnalisé</td>
-          <td>Montage sur mesure selon vos besoins</td>
-          <td>Sur devis</td>
-        </tr>
-      </tbody>
-    </table>
+  <section id="apropos">
+    <h2>À propos</h2>
+    <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
+    <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
   </section>
+
+  <footer>
+    &copy; 2025 KarlTech. Tous droits réservés.
+  </footer>
+
+  <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">↑ Haut de page</button>
+
+  <script>
+    const btn = document.getElementById('backToTop');
+    window.addEventListener('scroll', () => {
+      btn.style.display = window.scrollY > 300 ? 'block' : 'none';
+    });
+
+    const form = document.querySelector("form");
+    const confirmation = document.getElementById("confirmation");
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      }).then(response => {
+        if (response.ok) {
+          confirmation.style.display = "block";
+          form.reset();
+        } else {
+          alert("Une erreur est survenue. Essayez à nouveau.");
+        }
+      });
+    });
+  </script>
 </body>
 </html>
