--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
   </header>
 
   <nav>
+    <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
-    <a href="#contact">Contact</a>
     <a href="faq.html">FAQ</a>
+    <a href="#contact">Contact</a>
     <a href="#apropos">À propos</a>
   </nav>
 
