--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8BQ6dM2v6j5vJf8kRAZP3w3ZXt87GXjG+5XkQ/29h6wxNRZ1qNhN/mI6Lg0j3UL2Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <header>
+    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
+    <div>
+      <h1>KarlTech</h1>
+      <p>Votre expert en soutien informatique à Shawinigan et environs</p>
+    </div>
+    <div style="clear: both;"></div>
+  </header>
+
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="faq.html">FAQ</a>
+    <a href="index.html#contact">Contact</a>
+    <a href="index.html#apropos">À propos</a>
+  </nav>
+
   <h1>Nos Services et Tarifs</h1>
 
   <section id="services">
@@ -61,7 +78,7 @@
   </section>
 
   <footer>
-    &copy; 2025 KarlTech. Tous droits réservés.
+    &copy; 2025 KarlTech. Tous droits réservés. | <a href="index.html">← Retour à l'accueil</a>
   </footer>
 </body>
 </html>
