--- a/index.html
+++ b/index.html
@@ -25,6 +25,34 @@
     <a href="#apropos">À propos</a>
   </nav>
 
+  <section>
+    <h2>Pourquoi choisir KarlTech ?</h2>
+    <ul>
+      <li><i class="fas fa-check-circle"></i> Plus de 10 ans d'expérience en dépannage informatique</li>
+      <li><i class="fas fa-users"></i> Service personnalisé et humain</li>
+      <li><i class="fas fa-bolt"></i> Interventions rapides, sur place ou à distance</li>
+      <li><i class="fas fa-dollar-sign"></i> Tarifs transparents et compétitifs</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Nos services populaires</h2>
+    <ul>
+      <li><i class="fas fa-laptop"></i> Formatage complet de votre PC – Windows remis à neuf</li>
+      <li><i class="fas fa-virus-slash"></i> Suppression de virus – Nettoyage en profondeur et optimisation</li>
+      <li><i class="fas fa-headset"></i> Assistance à distance – Intervention rapide via AnyDesk</li>
+    </ul>
+    <p><a href="services_tarifs.html" style="color:#66b2ff; font-weight:bold;">→ Voir tous les services et tarifs</a></p>
+  </section>
+
+  <section>
+    <h2>Témoignage client</h2>
+    <blockquote style="font-style: italic; border-left: 4px solid #66b2ff; padding-left: 10px;">
+      "Service ultra rapide et très professionnel. Mon ordinateur fonctionne comme neuf grâce à KarlTech. Je recommande à 100 %!"<br>
+      <small>– Julie R., Shawinigan</small>
+    </blockquote>
+  </section>
+
   <section id="contact">
     <h2>Contact</h2>
     <p>📧 <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
