--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </p>
     <ul>
       <li><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
+      <li><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales
       <li><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
       <li><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
       <li><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
