--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   </header>
 
   <nav>
-    <a href="index.html">Accueil</a>
+    <a href="index.html" class="active">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
     <a href="#apropos">À propos</a>
   </nav>
 
@@ -32,7 +32,7 @@
     </p>
     <ul>
       <li><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
-      <li><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales
+      <li><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales</li>
       <li><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
       <li><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
       <li><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
@@ -58,21 +58,6 @@
     <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d'utilisation.</p>
 
     <p><a href="services_tarifs.html" style="font-weight: bold; color: #66b2ff;">→ Voir tous les services et tarifs</a></p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Courriel : <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
-    <p>Téléphone : <a href="tel:8738879620">873-887-9620</a></p>
-    <p>Site web : <a href="https://www.karltech.ca">www.karltech.ca</a></p>
-
-    <h3>Formulaire de contact</h3>
-    <form action="https://formspree.io/f/mnnvdepz" method="POST">
-      <input type="text" name="nom" placeholder="Votre nom" required>
-      <input type="email" name="email" placeholder="Votre adresse e-mail" required>
-      <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
-      <button type="submit">Envoyer</button>
-    </form>
   </section>
 
   <section id="apropos">
