--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
     <p><strong>Site Web :</strong> <a href="https://www.karltech.ca">www.karltech.ca</a></p>
     <p><strong>Heures d'ouverture :</strong><br>
     Lundi au Vendredi : 17h00 à 21h00<br>
-    Samedi : sur rendez-vous<br>
-    Dimanche : fermé</p>
+    Samedi et Dimanche : 8h00 à 18h00</p>
+
 
     <h3>Formulaire de contact</h3>
     <form action="https://formspree.io/f/mnnvdepz" method="POST">
