--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,8 @@
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="#faq">FAQ</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
+
   </nav>
 
   <section id="faq">
