--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -1,48 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services et Tarifs – KarlTech</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8BQ6dM2v6j5vJf8kRAZP3w3ZXt87GXjG+5XkQ/29h6wxNRZ1qNhN/mI6Lg0j3UL2Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Services et Tarifs - KarlTech</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
+    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 60px; float: left; margin-right: 20px;">
     <div>
       <h1>KarlTech</h1>
-      <p>Votre expert en soutien informatique à Shawinigan et environs</p>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
     <div style="clear: both;"></div>
   </header>
 
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
-    <a href="index.html#contact">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
-  <h1>Nos Services et Tarifs</h1>
-
-  <section id="services">
-    <h2>Services offerts</h2>
-    <ul>
-      <li><i class="fas fa-sync-alt"></i> Formatage Windows – Réinitialisation complète avec installation de pilotes et mises à jour</li>
-      <li><i class="fas fa-shield-virus"></i> Suppression de virus – Nettoyage en profondeur et optimisation des performances</li>
-      <li><i class="fas fa-cogs"></i> Installation de logiciels – Assistance pour installer vos programmes essentiels</li>
-      <li><i class="fas fa-file-word"></i> Aide avec Microsoft Office – Word, Excel, Outlook, configuration et dépannage</li>
-      <li><i class="fas fa-headset"></i> Assistance à distance – Intervention rapide avec AnyDesk sans vous déplacer</li>
-      <li><i class="fas fa-microchip"></i> Installation ou remplacement de pièces – RAM, disque SSD, carte graphique, etc.</li>
-      <li><i class="fas fa-tools"></i> Assemblage PC – Création d’ordinateurs sur mesure selon vos besoins</li>
-      <li><i class="fas fa-database"></i> Sauvegarde de données – Copie sécurisée avant une intervention importante</li>
-      <li><i class="fas fa-envelope"></i> Création de courriels professionnels – Configuration d'adresses e-mail pro (Zoho, etc.)</li>
-    </ul>
-  </section>
-
-  <section id="tarifs">
-    <h2>Tarifs</h2>
+  <section>
+    <h2>Nos services populaires</h2>
     <table>
       <thead>
         <tr>
@@ -53,23 +35,38 @@
       </thead>
       <tbody>
         <tr>
-          <td>Formatage Windows</td>
-          <td>Installation propre de Windows, pilotes, mises à jour</td>
+          <td>Formatage / réinstallation de Windows</td>
+          <td>Réinitialisation complète avec mise à jour des pilotes et logiciels essentiels</td>
           <td>60 $</td>
         </tr>
         <tr>
-          <td>Suppression de virus</td>
-          <td>Nettoyage complet et optimisation du système</td>
+          <td>Suppression de virus et optimisation</td>
+          <td>Nettoyage complet et sécurisation de votre système</td>
           <td>50 $</td>
         </tr>
         <tr>
-          <td>Installation de pièces</td>
-          <td>RAM, SSD, carte graphique, etc.</td>
+          <td>Assistance à distance (AnyDesk)</td>
+          <td>Connexion rapide à distance pour intervention immédiate</td>
           <td>40 $</td>
         </tr>
         <tr>
-          <td>Assemblage PC personnalisé</td>
-          <td>Montage sur mesure selon vos besoins</td>
+          <td>Installation de pièces matérielles</td>
+          <td>Ajout ou remplacement de composantes (RAM, SSD, carte graphique...)</td>
+          <td>40 $</td>
+        </tr>
+        <tr>
+          <td>Installation de logiciels</td>
+          <td>Installation de Microsoft Office, antivirus, ou autres applications</td>
+          <td>30 $</td>
+        </tr>
+        <tr>
+          <td>Sauvegarde ou récupération de données</td>
+          <td>Clonage, sauvegarde externe ou tentative de récupération</td>
+          <td>60 $</td>
+        </tr>
+        <tr>
+          <td>Autres services</td>
+          <td>À la demande du client : configuration, dépannage, formation, etc.</td>
           <td>Sur devis</td>
         </tr>
       </tbody>
@@ -77,7 +74,8 @@
   </section>
 
   <footer>
-    &copy; 2025 KarlTech. Tous droits réservés. | <a href="index.html">← Retour à l'accueil</a>
+    <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
