--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -45,6 +45,11 @@
           <td>50 $</td>
         </tr>
         <tr>
+          <td>Montage d’ordinateur personnalisé (Custom Build)</td>
+          <td>Assemblage sur mesure selon vos pièces ou sur devis complet avec recommandation</td>
+          <td>Sur devis</td>
+        </tr>
+        <tr>
           <td>Assistance à distance (AnyDesk)</td>
           <td>Connexion rapide à distance pour intervention immédiate</td>
           <td>40 $</td>
