--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,9 @@
   </section>
 
   <footer>
-    &copy; 2025 KarlTech. Tous droits réservés.
-  </footer>
+  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+</footer>
+
 </body>
 </html>
