--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,10 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
-    <p><a href="index.html">← Retour à l'accueil</a></p>
+  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+</footer>
+
   </footer>
 </body>
 </html>
