--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -78,9 +78,11 @@
     </table>
   </section>
 
-  <footer>
-    <p><a href="index.html">&larr; Retour à l'accueil</a></p>
-    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+ <footer>
+  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+</footer>
+
   </footer>
 </body>
 </html>
